# armory

./: .gitignore  LICENSE  Makefile.am  README.armory.txt  armory.bzw  armory.conf  armory.cpp  armory.def  armory.sln  armory.vcxproj
pybzw/: pybzw.py  pybzw_armory.py
textures/: armorypoint.blend  arrow.blend
